Fix responsive image and video spacing issues

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -1116,11 +1116,6 @@ table.tableblock pre code.language-bash.hljs {
     text-align: center;
   }
 
-  .doc.landing-page-doc .media-left {
-    padding-left: 0;
-    text-align: center;
-  }
-
   main {
     padding-bottom: 2rem;
   }
