--- a/src/css/landing-page.css
+++ b/src/css/landing-page.css
@@ -397,4 +397,9 @@
     padding-left: 0;
     padding-right: 0;
   }
+
+  .doc.landing-page-doc .media-left {
+    padding-left: 0;
+    text-align: center;
+  }
 }
